--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lyrasearch/lyra": "^0.4.10",
     "daisyui": "^2.51.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
