--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce",
-  "homepage": "https://marcos-bernasconi.github.io/store/",
+  "homepage": "https://marcos-bernasconi.github.io/Store/",
   "private": false,
   "version": "0.0.0",
   "type": "module",
